# tweet-sentiment-extraction

./: README.md  main.py  pyproject.toml
data/: dataset.py  preprocess.py  preprocess_data.py
model/: predict.py  train.py
